# EUDemographyCleaner

./: .gitignore  EU Demography.ipynb  M2.csv  biais.md  callback.py  dialogue.md  directions.csv  geocodes.csv  index.html  index.ipynb  model.json  nb.css  ones&zeros.ipynb  pc_recommender.owx  sequences.csv  tspan.mat  weather.csv
Data_AMAL/: X2.txt  Y.txt
hosted/: recap.csv
hosted/test_data/: data_with_nan_inconsistency.csv  data_with_string.csv  linear_oscillator_X.csv  linear_oscillator_augmented.csv  linear_oscillator_data.csv  linear_oscillator_targets.csv  linear_oscillator_weights.csv  lorenz_X.csv  lorenz_augmented.csv  lorenz_data.csv  lorenz_dtargets.csv  lorenz_dweights.csv  (+2 more)
internship/: base_brunton_algorithm.m  benchmark.ipynb  comments.md  covid-nn.ipynb  covid.ipynb  covid_control.html  covid_control.ipynb  covid_forecast.ipynb  covid_predictions_comparison.ipynb  covid_simple.ipynb  covid_sir.ipynb  covid_time.html  covid_time.ipynb  data_fetching.ipynb  data_generation.m  data_generation.py  del.html  del.md  demo.ipynb  descriptive_analysis.ipynb  fitting_vs_ode.ipynb  heat.mat  illustrations.ipynb  index.ipynb  indicators.csv  integration_solvers_difference.ipynb  mcmc.ipynb  mcmc2.ipynb  multiple_trajectories.ipynb  n-beats.ipynb  nonlinear.ipynb  oct_odes.mat  predictions_08-04-2020.csv  py_odes.mat  simple_ode.mat  sir.ipynb  sparse_regression.ipynb  sparse_regression.py  sparse_regression_pde.ipynb  tutorial.ipynb  (+1 more)
internship/sysid/: CMakeLists.txt  SysId.cpp  SysId.hpp
internship/sysid/test/: CMakeLists.txt  SysIdTests.cpp
(+63 files in other folders)
